force-app/main/default/objects/FundingAwardRequirement/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <description>This field denotes the additional approval notes</description>
    <label>Approval Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>