force-app/main/default/objects/FundingAwardRequirement/fields/Funding_Award_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_End_Date__c</fullName>
    <formula>FundingAward.EndDate</formula>
    <label>Funding Award End Date</label>
    <type>DateTime</type>
</CustomField>