force-app/main/default/objects/FundingAwardRequirement/fields/Funding_Award_Name__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Name__c</fullName>
    <formula>FundingAward.Name</formula>
    <label>Funding Award Name</label>
    <type>Text</type>
</CustomField>