force-app/main/default/objects/FundingAwardRequirement/validationRules/Approval_Status_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Status_Notes</fullName>
    <active>true</active>
    <description>This verification rule works when the approval status as Corrections Needed.</description>
    <errorConditionFormula>AND(
  ISPICKVAL( ApprovalStatus , &quot;Corrections needed&quot;),
  LEN(TRIM(Approval_Notes__c)) = 0
)</errorConditionFormula>
    <errorMessage>Approval notes are required when requesting corrections.</errorMessage>
</ValidationRule>